@@ -450,7 +450,7 @@ DeepStorage=Unlock a new Area inside the Control Center
 MobileFactoryTitle=Mobile Factory
 mfInfosTitle=Basic Informations
 mfTanksTitle=Fluid Tanks
-mfOreSilosTitle=Ore Silos
+mfDeepStorageTitle=Deep Storages
 mfStructureTitle=Structures
 mfInventoryTitle=Inventory
 mfPosition=Position
@@ -496,11 +496,6 @@ Tank2Label=Tank 2
 Tank3Label=Tank 3
 Tank4Label=Tank 4
 Tank5Label=Tank 5
-OreSilo1Label=Ore Silo 1
-OreSilo2Label=Ore Silo 2
-OreSilo3Label=Ore Silo 3
-OreSilo4Label=Ore Silo 4
-OreSilo5Label=Ore Silo 5
 OreCleaner=Ore Cleaner
 FluidExtractor=Fluid Extractor
 Speed=Speed
@@ -531,7 +526,6 @@ LinkedTo=Linked to
 Unlinked=Unlinked
 CNTotalEnergy=Network Energy
 CNConsumption=Network Consumption
-OreSilo=Ore Silos
 DataNetwork=Data Network ID
 Connected=Connected to Transmitter
 Unknow=Unknow
@@ -567,7 +561,7 @@ Construct=Construct
 Deconstruct=Deconstruct
 InvalidStructure=Invalid Structure
 DeepStorageID=Deep Storage ID
-DeepStorage=Deep Storage
+DeepStorage=Deep Storages
 
 
 
