@@ -91,6 +91,8 @@ function DC:update()
 		self:setActive(true)
 	else
 		self:setActive(false)
+		self.ent.get_control_behavior().parameters = nil
+		return
 	end
 	
 	-- Save the Data Storage count --
