@@ -3,8 +3,11 @@ Version: 0.0.74
 Date: 15/01/2020
   Changes:
     - The Mining Jet Flag now display if the Mobile Factory is not found
+    - The Mining Jet Flag will not send its Inventory if the Mobile Factory is not found
   Bugfixes:
     - Fixed a crash when the Mobile Factory is removed or destroyed
+  Gui:
+    - Little rework of the Deep Storage Frame
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.73
 Date: 14/01/2020
